Major improvements including adjustments for new Helmholtz setup

--- a/tools/rlc-outlining.ipynb
+++ b/tools/rlc-outlining.ipynb
@@ -1181,11 +1181,11 @@
     "    A = 7.50279e-9\n",
     "    return 1/np.sqrt(capacitance * A)\n",
     "\n",
-    "def calculate_resonance_frequency(capacity, inductance):\n",
+    "def calculate_resonance_frequency(capacitance, inductance):\n",
     "    \"\"\"\n",
-    "    For a given capacity and inductance, calculate the resonance frequency\n",
+    "    For a given capacitance and inductance, calculate the resonance frequency\n",
     "    \"\"\"\n",
-    "    return np.sqrt(1 / (capacity * 1e-12 * inductance)) / 2 / np.pi / 1e3\n",
+    "    return np.sqrt(1 / (capacitance * 1e-12 * inductance)) / 2 / np.pi / 1e3\n",
     "\n",
     "combinations_df[\"resonance_frequency\"] = calculate_resonance_frequency(combinations_df[\"sum\"].astype(np.float64).to_numpy(), inductance)\n",
     "combinations_df[\"frequency_jump\"] = abs(combinations_df[\"resonance_frequency\"].diff())\n",
