[rlc-outlining] Add some calculations for AC Helmholtz Coils

--- a/tools/rlc-outlining.ipynb
+++ b/tools/rlc-outlining.ipynb
@@ -31,7 +31,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "source": [
     "# %matplotlib widget\r\n",
     "\r\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "source": [
     "def calculate_magnetic_field(inductance, current, windings, radius):\r\n",
     "    \"\"\"\r\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "source": [
     "path = r\"C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\me-devices\\rlc-settings\\2021-08-20_coil-1-200uH.json\"\r\n",
     "with open(path) as json_file:\r\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "source": [
     "\r\n",
     "# In pF\r\n",
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "# Desired inductance\r\n",
     "goal_inductance = 50e-6\r\n",
@@ -1259,11 +1259,23 @@
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-d27c7260fbe6>, line 6)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-d27c7260fbe6>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    wire_diameter = 0.61    e-3      # in m\u001b[0m\n\u001b[1;37m                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   windings radius length       r/l inductance  field_1A wire_length\n",
+      "0      33.0   20.0  20.13  0.993542  45.083536  1.087162    4.146902\n",
+      "1      35.0   19.0  21.35   0.88993  45.279512  1.140714    4.178318\n",
+      "2      34.0   20.0  20.74   0.96432  47.070408  1.101689    4.272566\n",
+      "3      36.0   19.0  21.96  0.865209  47.131042  1.154376    4.297699\n",
+      "4      35.0   20.0  21.35  0.936768  49.075041  1.115791     4.39823\n",
+      "5      26.0   27.0  15.86  1.702396   48.71559   0.81812    4.410796\n",
+      "6      37.0   19.0  22.57  0.841825  48.996886  1.167642    4.417079\n",
+      "7      36.0   20.0  21.96  0.910747  51.096684  1.129485    4.523893\n",
+      "8      38.0   19.0  23.18  0.819672  50.876441  1.180527     4.53646\n",
+      "9      26.0   28.0  15.86  1.765448  51.313089  0.801288    4.574159\n",
+      "10     35.0   21.0  21.35  0.983607  52.954173  1.092053    4.618141\n",
+      "11     37.0   20.0  22.57  0.886132  53.134631  1.142789    4.649557\n",
+      "12     27.0   28.0  16.47  1.700061  54.448515  0.818759    4.750088\n"
      ]
     }
    ],
@@ -1304,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "def calculate_magnetic_field_from_Vind(windings, radius, maximum_induced_voltage, frequency):\r\n",
     "    \"\"\"\r\n",
@@ -1340,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "source": [
     "def calculate_magnetic_field_helmholtz(windings, current, radius):\r\n",
     "    \"\"\"\r\n",
@@ -1363,6 +1375,46 @@
       "8.99 mT magnetic field for 200 windings, 5 A and 0.1 m radius\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Inductivity of a Pair of Helmholtz Coils\r\n",
+    "\r\n",
+    "Two coils in series (that is what it is for two Helmholtz Coils) add their inductances linearily\r\n",
+    "\r\n",
+    "$$L_\\text{tot} = L_1 + L_2 + ...$$\r\n",
+    "\r\n",
+    "The magnetic field, produced by a pair of Helmholtz Coils is given by\r\n",
+    "$$B=(4/5)^{3/2}\\cdot \\mu_0 n I / R$$"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "source": [
+    "print(calculate_magnetic_field_helmholtz(38, 1, 0.05) * 1e3)\r\n",
+    "print(calculate_inductance(50, 0.04, 0.02)*1e6)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.6833739770356418\n",
+      "285.56668674535564\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "I think I really want to hit around 200 uH again because that is simply convenient to handle (regarding capacitors). Therefore, it would be ideal to have two coils with 100 uH inductance each (because they add up linearily). Also the above parameters should be respected to obtain enough field. I am pretty much sure that indeed a multilayered coil is the only way of achieving that."
    ],
    "metadata": {}
   }
